# hallticket

./: README copy.md  README.md  extract_txt.py  hall_tickets.csv  main.py  merged_mbbs_results.csv  package-lock.json  package.json  pyproject.toml  requirements.txt  run_portal_extraction.ps1  scrape_uhsap_results.py
npm_code/: extract_mbbs_results.mjs  extract_mbbs_results_brave.mjs  extract_mbbs_results_pro.mjs  hall_tickets_summary.csv  merge_results.mjs  run_portal_extraction.cmd
