[project]
name = "hallticket"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.12.0",
    "openpyxl>=3.1.0",
    "pandas>=2.2.0",
    "pillow>=10.0.0",
    "playwright>=1.52.0",
    "pytesseract>=0.3.10",
]
